Fixed margin collapsing

--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,11 @@ body {
 }
 
 #projects-anchor {
-  top: -71px;
+  top: -100px;
 }
 
 #contact-anchor {
-  top: 0px;
+  top: -20px;
 }
 
 #main {
