--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,5 +1,6 @@
 #contact {
     flex-direction: column;
+    min-height: 100vh;
 }
 
 #socials {
@@ -66,7 +67,7 @@ button {
     color: #D8D8D8;
     font-size: 1rem;
     width: 95px;
-    height: 25px;
+    min-height: 25px;
     background-color: #4AA788;
     border-radius: 3px;
     border: 1px solid #4AA788;
@@ -86,7 +87,14 @@ h2, input {
     margin-bottom: 30px;
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (max-width: 449px) {
+    #contact {
+        min-height: 100vh;
+        margin: 60px auto;
+    }
+}
+
+@media only screen and (min-width: 450px) {
     #contact {
         width: 100%;
         height: 100vh;
@@ -105,7 +113,7 @@ h2, input {
 
     .separation-bar {
         width: 80%;
-        height: 2px;
+        min-height: 2px;
         margin: 40px auto;
     }
 
