--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,10 +1,12 @@
 #projects {
     color: #D8D8D8;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* min-height: 100vh; */
 }
 
 #projects h1 {
-    margin: 10px auto 20px;
+    margin: 10px auto 20px auto;
 }
 
 .flex-centered {
@@ -49,7 +51,11 @@ figcaption {
     text-align: justify;
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (max-width: 449px) {
+    #projects {min-height: 100vh}
+}
+
+@media only screen and (min-width: 450px) {
     #projects {
         height: 100vh;
         width: 100vw;
